<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:gravity="end"
        android:textSize="60sp"
        android:text="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnOne"
            android:text="@string/button_one"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="50sp"/>
        <Button
            android:id="@+id/btnTwo"
            android:layout_weight="1"
            android:text="@string/button_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="50sp"/>
        <Button
            android:id="@+id/btnThree"
            android:layout_weight="1"
            android:text="@string/button_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="50sp"/>
        <Button
            android:id="@+id/btnPlus"
            android:layout_weight="1"
            android:text="@string/button_plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="50sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnFore"
            android:layout_weight="1"
            android:text="@string/button_for"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="50sp"/>
        <Button
            android:id="@+id/btnFive"
            android:layout_weight="1"
            android:text="@string/button_five"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="50sp"/>
        <Button
            android:id="@+id/btnSix"
            android:layout_weight="1"
            android:text="@string/button_six"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="50sp"/>
        <Button
            android:id="@+id/btnMinus"
            android:layout_weight="1"
            android:text="@string/button_minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="50sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnSeven"
            android:layout_weight="1"
            android:text="@string/button_seven"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="50sp"/>
        <Button
            android:id="@+id/btnEight"
            android:layout_weight="1"
            android:text="@string/button_eight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="50sp"/>
        <Button
            android:id="@+id/btnNine"
            android:layout_weight="1"
            android:text="@string/button_nine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="50sp"/>
        <Button
            android:id="@+id/btnMultiplication"
            android:layout_weight="1"
            android:text="@string/button_multiplication"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="50sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnZero"
            android:layout_weight="2"
            android:text="@string/button_zero"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="50sp"/>
        <Button
            android:id="@+id/btnPoint"
            android:layout_weight="1"
            android:text="@string/button_point"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="50sp"/>
        <Button
            android:id="@+id/btnDivision"
            android:layout_weight="1"
            android:text="@string/button_division"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="50sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnClear"
            android:layout_weight="3"
            android:text="@string/button_clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="50sp"/>
        <Button
            android:id="@+id/btnEqually"
            android:layout_weight="1"
            android:text="@string/button_equally"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="50sp"/>
    </LinearLayout>
</LinearLayout>